Gradle 7, JDK related changes and OS 2.0 (#179)
* Gradle 7, JDK related changes and OS 2.0

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Changing logic for clone git repo to make it compatible with gradle 7

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Fixing unit tests to remove reference of deleted fields in OS 2.0

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Fixing apache Conflict depedency issue

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>

* Reverting temporary changes to point to local RCA repo

Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>